# socket-connector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  admin.py  config.py  connector.py  logging.py  metrics.py  providers.py  routes.py
playground/: index.html  live-logs.html  package-lock.json  package.json  vite.config.js
playground/src/: App.css  App.jsx  LiveLogs.css  LiveLogs.jsx  index.css  live-logs-main.jsx
playground/src/components/: AdminPanel.jsx  DtmfKeypad.jsx  EventLog.jsx  LatencyPanel.jsx  Waveform.jsx
playground/src/utils/: audio.js  protocol.js  recorder.js  ulaw.js
scripts/: pickup_test.py
