[project]
name = "websocket-connector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
    "livekit-api>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-json-logger>=3.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "websockets>=15.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
]
